# Multi-Agent-Research-Planner

./: .gitignore  FinalDesign.md  README.md  main.py  pyproject.toml  requirements.txt  test_pipeline.py
.streamlit/: config.toml
agents/: init.py  planner.py  retriever.py  summarizer.py  synthesizer.py
outputs/: retrieval_results.json  summaries.json
prompts/: planner_prompt.txt  summarizer_wiki.txt  synthesizer_prompt.txt
